{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "9925e071-3a85-4600-8fcd-1e4a567da2af",
            "actions": [
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "ac55d04f-596b-4935-ab8b-4f3afd7e453f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap,SlowTap",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "6ea280f1-2cce-433d-a032-0f92374cd972",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "e959fdc2-72f7-4851-96f4-ebebd5550b5e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b2a8d1c2-0ff8-4629-8262-36cb7ce775df",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7128f8b-2fdc-4866-933e-a3636d155ef2",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "425fce58-8dd4-4aa5-9779-d3a7d8d1d2cf",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}